# nijika

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
nijika/: main.py
nijika/cogs/: cog.py  hello.py  translate.py
